# sot-application

./: .git-blame-ignore-revs  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
.travis/: build
doc/: CMakeLists.txt
doc/sphinx/: conf.py.in  index.rst.in
doxygen/HEAD/: graph_legend.html  index.html  navtreedata.js
doxygen/HEAD/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  (+36 more)
sot_application/: CMakeLists.txt
sot_application/acceleration/: precomputed_meta_tasks.py
sot_application/velocity/: precomputed_meta_tasks.py  precomputed_tasks.py
src/: CMakeLists.txt
src/dynamic_graph/sot/application/acceleration/: precomputed_meta_tasks.py  precomputed_tasks.py  precomputed_tasks.py~
src/dynamic_graph/sot/application/velocity/: precomputed_meta_tasks.py  precomputed_tasks.py
